Bug 581778 - libavoid clusters and cleanup
Change-Id: I6b05f6bcc89965f9a6e651e5ca60752e26ae8e55
(cherry picked from commit 1aa49595dcd675d1db0b4ed3cbabf4a846150565)